# zero

./: .gitignore  DESIGN.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
admin-portal/: nginx.conf
admin-portal/backend/: .gitignore  pyproject.toml  requirements.txt
admin-portal/backend/app/: __init__.py  auth.py  bootstrap.py  catalog.py  config.py  database.py  main.py  models.py  schemas.py
admin-portal/backend/app/routers/: assets.py  backups.py  catalog.py
admin-portal/backend/app/services/: storage.py
admin-portal/backend/tests/: test_assets.py
admin-portal/frontend/: env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: BATTLE.md  DESIGN.md  PLAN.md
editor/: EQUIPMENT_EDITOR.md  MAP_EDITOR.md  MUSIC_EDITOR.md  README.md
editor/backend/: .gitignore  README.md  main.py  pyproject.toml
editor/backend/app/: __init__.py  application.py  config.py  models.py  repository.py
editor/backend/app/routes/: __init__.py  equipment.py  maps.py  monsters.py  music.py
editor/backend/tests/: conftest.py  test_monsters_api.py
editor/backend/tests/data/: monster-blueprints-test.json
editor/frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
editor/scripts/: serve.sh
scripts/: generate_black_png.py  optimize_assets.py  portrait_png_to_webp.py  portrait_to_webp.py  remove_white_border.py
src/: App.vue  main.ts  style.css
src/components/: AiNpcPanel.vue  BattleQuickItemBar.vue  CheatPanel.vue  CultivationMethodCard.vue  CultivationTicker.vue  LevelUpSuccessModal.vue  MagicRhythmTrack.vue  MonsterAttackTimeline.vue  (+8 more)
(+133 files in other folders)
