[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-admin-portal-backend"
version = "0.1.0"
description = "Backend API for the zero admin portal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>0.115.8",
    "uvicorn[standard]==0.32.1",
    "SQLAlchemy==2.0.36",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "python-multipart==0.0.17",
    "aiofiles==23.2.1",
    "itsdangerous==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio",
    "httpx==0.27.2",
    "pre-commit",
]
test = [
    "pytest==8.3.4",
    "pytest-asyncio",
    "pytest-cov",
    "httpx==0.27.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]